--- a/css/style.css
+++ b/css/style.css
@@ -71,12 +71,16 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: #fff;
   background-color: orangered;
-  flex: 1; }
+  flex: 1;
+  height: 80rem; }
 
 .logo {
   height: 3.25rem;
@@ -154,3 +158,19 @@ body {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem; }
+
+.side-nav__item {
+  list-style-type: none; }
+
+.side-nav__link {
+  text-decoration: none; }
+
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
+
+.legal {
+  font-size: 1.25rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem; }
