--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -114,3 +114,32 @@
         margin-right: 1rem;
     }
 }
+
+/////////////////////////////////////////////////
+// SIDE NAVIGATION
+.side-nav {
+    
+    &__item {
+        list-style-type: none;
+
+    }
+
+    &__link {
+        text-decoration: none;
+    }
+
+    &__icon {
+        width: 1.75rem;
+        height: 1.75rem;
+
+    }
+}
+
+///////////////////////////////////////////////
+//LEGAL BOX
+.legal {
+    font-size: 1.25rem;
+    color: var(--color-grey-light-4);
+    text-align: center;
+    padding: 2.5rem;
+}
