--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -32,6 +32,26 @@
 .hotel-view {
     background-color: #fff;
     flex: 1;
-    height: 80rem;
     
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+    padding: 3rem;
+    font-size: 1.4rem;
+}
+
+.user-reviews {
+    background-color: orchid;
+    flex: 1;
 }
